--- a/devdesk.html
+++ b/devdesk.html
@@ -80,6 +80,19 @@
 					</ul>
 				</div>
 				<div class='col-md-3 link-menu'>
+					<h3>Online Courses</h3>
+					<ul>
+						<li><a href="https://spectrum.ieee.org/">Udacity</a></li>
+						<li><a href="https://medium.com/">edX</a></li>
+						<li><a href="https://getpocket.com/a/queue/">Coursera</a></li>
+						<li><a href="https://www.techworm.net/">Khan Academy</a></li>
+						<li><a href="http://https://news.ycombinator.com/">MIT OCW</a></li>
+						<li><a href="https://thehackernews.com/">Udemy</a></li>
+						<li><a href="https://www.geek.com/">Stanford Online</a></li>
+						
+					</ul>
+				</div>
+				<div class='col-md-3 link-menu'>
 					<h3>Practice</h3>
 					<ul>
 						<li><a href="https://www.careercup.com/">Career Cup</a></li>
